--- a/package.json
+++ b/package.json
@@ -37,8 +37,13 @@
     "babel-register": "^6.4.3",
     "eslint": "1.10.1",
     "eslint-plugin-mocha": "^1.1.0",
+    "filesize": "^3.2.0",
     "mocha": "^2.3.4",
     "power-assert": "^1.2.0"
+  },
+  "dependencies": {
+    "debug": "^2.2.0",
+    "lodash": "^4.0.1"
   },
   "directories": {
     "test": "test"
